# AutonomousUAV

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
TimeCapsoul.xcodeproj/: project.pbxproj
TimeCapsoul.xcodeproj/project.xcworkspace/xcuserdata/mehmetdemir.xcuserdatad/: UserInterfaceState.xcuserstate
TimeCapsoul/Application/: AppCoordinator.swift  AppDelegate.swift  SceneDelegate.swift
TimeCapsoul/Assets.xcassets/backround.imageset/: Contents.json
TimeCapsoul/Assets.xcassets/ja.imageset/: Contents.json
TimeCapsoul/Core/AlertSystem/: AlertActionModel.swift  AlertFactory.swift  AlertModel.swift  AppAlertTemplate.swift
TimeCapsoul/Core/Constants/: AppConstants.swift  NetworkConstants.swift
TimeCapsoul/Design/DesignSystem/: AppColors.swift  AppFonts.swift  AppSpacing.swift
TimeCapsoul/Localization/: LocalizationManager.swift  LocalizedKey.swift  String+Localized.swift  SupportedLanguage.swift
TimeCapsoul/Modules/Onboarding/Language/: LanguageSelectionConctracts.swift
TimeCapsoul/Support/Base/: BaseCollectionViewCell.swift  BaseCoordinator.swift  BaseEntity.swift  BaseErrorHandler.swift  BaseInteractor.swift  BaseObservable.swift  BasePresenter.swift  BaseRouter.swift  BaseView.swift  BaseViewController.swift
TimeCapsoulTests/: TimeCapsoulTests.swift
TimeCapsoulUITests/: TimeCapsoulUITests.swift  TimeCapsoulUITestsLaunchTests.swift
docs/: architecture.md
src/: __init__.py
src/planning/: __init__.py  astar.py  rrt.py
src/simulation/: __init__.py  environment.py
tests/: test_astar.py  test_environment.py  test_rrt.py
(+25 files in other folders)
